src/app/components/result/result.component.css
article header div > i.fa {
  margin-right: 3em;
  display: inline-block;
  width: 1em;
}

article h4 {
  font-size: 1rem;
  display: inline-block;
}

.result {
  --result-info-color: #157347;
  --result-info-bg: var(--result-info-color);
  --result-notice-color: #0f75e1;
  --result-notice-bg: var(--result-notice-color);
  --result-warning-color: #b55e03;
  --result-warning-bg: #ff9019;
  --result-error-color: #bb2d3b;
  --result-error-bg: var(--result-error-color);
  --result-critical-color: var(--result-error-color);
  --result-critical-bg: var(--result-error-color);
}

article header.info {
  color: var(--result-info-color);
}

article header.notice {
  color: var(--result-notice-color);
}

article header.warning {
  color: var(--result-warning-color);
}

article header.error {
  color: var(--result-error-color);
}

article header.critical {
  color: var(--result-critical-color);
}

article h4 i {
  width: 1em;
  display: inline-block;
  text-align: center;
  margin-left: -1.3em ;
  margin-right: 0.3em;
}

article header  {
  display: flex;
}

article header div {
  display: flex;
  cursor: pointer;
}
article header .test-case-id {
  display: inline-block;
  background-color: #d3eeff;
  color: #555454;
  margin-left: 1em;
  font-size: 0.9em;
  padding: 0.15em 0.4em;
  white-space: nowrap;
  height: fit-content;
}

article ul li .level {
  display: inline;
  padding: 0.2em 0.3em;
  border-radius: 0.3em;
  font-size: 0.8em;
  margin-right: 0.5em;
}

.filters .active.info,
article ul li .level.info {
  background: var(--result-info-bg);
  color: white;
}

.filters .active.notice,
article ul li .level.notice {
  background: var(--result-notice-bg);
  color: white;
}

.filters .active.warning,
article ul li .level.warning {
  background: var(--result-warning-bg);
  color: black;
}

.filters .active.error,
article ul li .level.error {
  background: var(--result-error-bg);;
  color: white;
}

.filters .active.critical,
article ul li .level.critical {
  background: var(--result-critical-bg);;
  color: white;
}

article li {
  list-style: none;
  display: flex;
}

article li p {
  word-break: normal;
  overflow-wrap: anywhere;
}

article ul {
  padding-left: 4em;
}

.collapsed {
  display: none!important;
}

article h3::after {
  content: '';
  width: 100%;
  display: flex;
  height: 1px;
  background: black;
  margin-left: 1rem;
}

article h3 {
  display: flex;
  align-items: center;
}

.result {
  border-radius: 5px;
  width     : 100%;
  padding   : 1rem;
  color     : black;
  margin-bottom: 20px;
}

.result > div > article {
  background: #f7f7f7;
  padding: 0.5rem;
  margin-top: 1rem;
}

#link_location {
  width: 100%;
}

.modal-title {
  color: #000;
}

.vertical-align {
  display: flex;
  align-items: center;
}

.search {
  flex: 1;
  min-width: 300px;
}

.nav-link.active.all {
    background-color: #919191;
}

.nav-link {
  cursor: pointer;
  color: inherit;
}

.dropdown-body {
    position: relative;
    padding: 1rem;
    white-space: nowrap;
}

button.share + .dropdown-menu .dropdown-body {
    min-width: calc(min(420px, 100vw - 2rem));
    display: flex;
}

button.btn-clipboard:hover {
    border: 1px solid #cdc7c2;
}

button.btn-clipboard > i.fa-check {
    color: #157347;
}

button.btn-clipboard > i.fa-remove {
    color: #bb2d3b;
}

.ipvX {
  position: absolute;
  right:0;
  bottom: 0;
}

.result.container > div:first-child {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.actions-btn {
  flex-grow: 1;
  display: flex;
  justify-content: flex-end;
}

.filters {
  display: flex;
  flex-wrap: wrap;
}

.filters > * {
  margin-top: 1rem;
}

.export, .share, .settings {
  margin-left: 5px;
}

.history > i, .export > i, .share > i, .settings > i {
  margin-right: 4px;
}

.result section {
  display: block;
  width: 100%;
}

.result section h3 {
  position: sticky;
  top: 95px;
  z-index: 3;
  background-color: #f2f2f2;
  padding: 1rem;
  font-size: 1rem;
  margin: 8px 0 0 0;
  display: flex;
}

.result section > a {
  cursor: pointer;
}

.result section h3 i {
  width: 40px;
}

.result section h3::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 8px;
  background-color: #fff;
  bottom: calc(100% + 1px);
  left: 0;
  cursor: auto;
  /* fix for chrome */
  margin-bottom: -1px;
}

.result section .entry::before,
.result section h3::before {
  content: "";
  position: absolute;
  width: 7px;
  height: 100%;
  left: 0;
  top: 0;
}

.result section .entry::before {
  height: calc(100% + 1px);
  top: -0.5px;
}

.result section .entry {
  display: flex;
  padding: 1rem 1rem;
  position: relative;
}

.result section .entry:last-child {
  border: none;
}

.result section > div {
  padding-left: 40px;
}

.result section .entry {
  border-bottom: solid #dee2e6 1px;
}

.result section .entry .module-name {
  min-width: 15%;
  flex-shrink: 0;
}

.result section .entry .severity {
  min-width: 12%;
  flex-shrink: 0;
  font-weight: 700;
}

@media(max-width:767px){
  .result-header {
    width: 100%;
  }

  .result .module-name {
    display: none;
  }

  .result section .entry div.severity {
    min-width: 30%;
  }

  .result section > div {
    padding-left: 20px;
  }

  .actions-btn > div {
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  .actions-btn > div > * {
    flex-grow: 1;
  }

  .actions-btn > div > div {
    display: flex!important;
  }

  .actions-btn > div > div > button {
    flex-grow: 1;
  }
}

@media(max-width:991px) {
  .filters > ul {
    flex-grow: 1;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
  }
}

